--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
 
 body {
   margin: 0;
+  background-color: rgb(33, 36, 41);
+  color: white;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
